--- a/recipe.yml
+++ b/recipe.yml
@@ -1,8 +1,10 @@
+math:
+  - poly.cpp
 geometry:
   - basic.cpp
 graph_theory:
   - bipartite.cpp
-miscellaneous:
-  - nimp.cpp
   - euler-undir.cpp
   - euler-dir.cpp
+miscellaneous:
+  - nimp.cpp
